test(appkit): add drop verification harness (#353)